--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,11 @@ jobs:
         run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
       - name: Build and publish to registry
         uses: elgohr/Publish-Docker-Github-Action@master
+        env:
+          NPM_TOKEN: "${{ secrets.NPM_TOKEN }}"
         with:
           name: ${{ github.repository }}:${{ env.RELEASE_VERSION }}
           username: ${{ github.actor }}
           password: ${{ github.token }}
           registry: docker.pkg.github.com
+          buildargs: NPM_TOKEN
