--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set env
         run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
       - name: Push to GitHub Packages
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         env:
           NPM_TOKEN: "${{ secrets.NPM_TOKEN }}"
         with:
@@ -22,5 +22,5 @@ jobs:
           registry: docker.pkg.github.com
           repository: ${{ github.repository }}/main
           tag_with_ref: true
-          build-args: |
+          build_args: |
             NPM_TOKEN=${{ secrets.NPM_TOKEN }}
