--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,15 +12,13 @@ jobs:
         uses: actions/checkout@v1
       - name: Set env
         run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
-      - name: Push to GitHub Packages
-        uses: docker/build-push-action@v1
+      - name: Build and publish to registry
+        uses: elgohr/Publish-Docker-Github-Action@master
         env:
           NPM_TOKEN: "${{ secrets.NPM_TOKEN }}"
         with:
+          name: ${{ github.repository }}/main:${{ env.RELEASE_VERSION }}
           username: ${{ github.actor }}
           password: ${{ github.token }}
           registry: docker.pkg.github.com
-          repository: ${{ github.repository }}/main
-          tag_with_ref: true
-          build_args: |
-            NPM_TOKEN=${{ secrets.NPM_TOKEN }}"
+          buildargs: NPM_TOKEN
