--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,7 @@
 name: Release
-"on":
-  push:
-    branches:
-      - master
+on:
+  release:
+    types: [published]
 jobs:
   release:
     name: Release
@@ -13,12 +12,12 @@ jobs:
       - name: Set env
         run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
       - name: Build and publish to registry
-        uses: elgohr/Publish-Docker-Github-Action@master
+        uses: docker/build-push-action@v1
         env:
           NPM_TOKEN: "${{ secrets.NPM_TOKEN }}"
         with:
-          name: ${{ github.repository }}/main:${{ env.RELEASE_VERSION }}
+          repository: ${{ github.repository }}/main:${{ env.RELEASE_VERSION }}
           username: ${{ github.actor }}
           password: ${{ github.token }}
           registry: docker.pkg.github.com
-          buildargs: NPM_TOKEN
+          build_args: NPM_TOKEN=${{ secrets.NPM_TOKEN }}
