--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,8 @@
 name: Release
-on:
-  release:
-    types: [published]
+"on":
+  push:
+    branches:
+      - master
 jobs:
   release:
     name: Release
