--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
         env:
           NPM_TOKEN: "${{ secrets.NPM_TOKEN }}"
         with:
-          repository: ${{ github.repository }}/${{ github.event.repository.name }}:${{ env.RELEASE_VERSION }}
+          repository: ${{ github.repository }}/discord-handler-server-starter:${{ env.RELEASE_VERSION }}
           username: ${{ github.actor }}
           password: ${{ github.token }}
           registry: docker.pkg.github.com
