fix: adds RELEASE_VERSION to action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,8 +17,9 @@ jobs:
         env:
           NPM_TOKEN: "${{ secrets.NPM_TOKEN }}"
         with:
-          repository: ${{ github.repository }}/discord-handler-server-starter:${{ env.RELEASE_VERSION }}
+          repository: ${{ github.repository }}/discord-handler-server-starter
           username: ${{ github.actor }}
           password: ${{ github.token }}
           registry: docker.pkg.github.com
           build_args: "NPM_TOKEN=${{ secrets.NPM_TOKEN }}"
+          tag_with_ref: true
