--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "moment": "^2.29.0"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  }
 }
