--- a/.github/workflows/onReleasePublished.yml
+++ b/.github/workflows/onReleasePublished.yml
@@ -1,8 +1,8 @@
 name: Release as docker image
 on:
-  push:
-    tags:
-      - "*"
+  release:
+    types: [created]
+
 jobs:
   release:
     name: Release
