--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,14 +13,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
-      - name: npmrc
-        run: >-
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GH_PAT }}" >>
-          .npmrc
       - name: Install dependencies
         run: npm install
-        env:
-          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-          NPM_TOKEN: '${{ secrets.GH_PAT }}'
       - name: Run Jest
         run: npm test
+      - uses: ahmadnassri/action-dependabot-auto-merge@v2
+        with:
+          target: minor
+          github-token: ${{ secrets.GH_PAT }}
