--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,6 @@ jobs:
           NPM_TOKEN: '${{ secrets.NPM_TOKEN_NPMJS }}'
       - name: Set env
         run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
@@ -33,8 +32,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ github.token }}
-
+          password: ${{ secrets.GH_PAT }}
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
