--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,4 +38,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ github.repository }}/discord-handler-server-starter:${{ env.RELEASE_VERSION }}
+          tags: ghcr.io/ ${{ github.repository }}:${{ env.RELEASE_VERSION }}
+          #tags: ${{ github.repository }}/discord-handler-server-starter:${{ env.RELEASE_VERSION }}
