--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,15 +25,13 @@ jobs:
           NPM_TOKEN: '${{ secrets.NPM_TOKEN_NPMJS }}'
       - name: Set env
         run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GH_PAT }}
       - name: Build and push
         id: docker_build
@@ -41,5 +39,3 @@ jobs:
         with:
           push: true
           tags: ghcr.io/${{ github.repository }}:${{ env.RELEASE_VERSION }}
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
